specs/blueprints/errors/validation/missing_value.eno
# Querying an attribute for a required but missing value

-- input
field:
attribute =
-- input

-- javascript
parse(input).field('field').attribute('attribute').requiredStringValue();
-- javascript

-- php
Enolib\Parser::parse($input)->field('field')->attribute('attribute')->requiredStringValue();
-- php

-- python
enolib.parse(input).field('field').attribute('attribute').required_string_value()
-- python

-- ruby
Enolib.parse(input).field('field').attribute('attribute').required_string_value
-- ruby

## ValidationError

-- text
The attribute 'attribute' must contain a value.
-- text

-- snippet
   Line | Content
      1 | field:
 >    2 | attribute =
-- snippet

selection: [1,11] => [1,11]

# Querying a field for a required but missing value

-- input
field:
-- input

-- javascript
parse(input).field('field').requiredStringValue();
-- javascript

-- php
Enolib\Parser::parse($input)->field('field')->requiredStringValue();
-- php

-- python
enolib.parse(input).field('field').required_string_value()
-- python

-- ruby
Enolib.parse(input).field('field').required_string_value
-- ruby

## ValidationError

-- text
The field 'field' must contain a value.
-- text

-- snippet
   Line | Content
 >    1 | field:
-- snippet

selection: [0,6] => [0,6]

# Querying a field with empty line continuations for a required but missing value

-- input
field:
|

|
-- input

-- javascript
parse(input).field('field').requiredStringValue();
-- javascript

-- php
Enolib\Parser::parse($input)->field('field')->requiredStringValue();
-- php

-- python
enolib.parse(input).field('field').required_string_value()
-- python

-- ruby
Enolib.parse(input).field('field').required_string_value
-- ruby

## ValidationError

-- text
The field 'field' must contain a value.
-- text

-- snippet
   Line | Content
 >    1 | field:
 *    2 | |
 *    3 | 
 *    4 | |
-- snippet

selection: [0,6] => [3,1]

# Querying a field with an empty item for required values

-- input
field:
- item
-
-- input

-- javascript
parse(input).field('field').requiredStringValues();
-- javascript

-- php
Enolib\Parser::parse($input)->field('field')->requiredStringValues();
-- php

-- python
enolib.parse(input).field('field').required_string_values()
-- python

-- ruby
Enolib.parse(input).field('field').required_string_values
-- ruby

## ValidationError

-- text
The field 'field' may not contain empty items.
-- text

-- snippet
   Line | Content
      1 | field:
      2 | - item
 >    3 | -
-- snippet

selection: [2,1] => [2,1]
